add warning to rendered file savedsearches.conf

--- a/advent-of-code/default/savedsearches.conf
+++ b/advent-of-code/default/savedsearches.conf
@@ -1,3 +1,4 @@
+# savedsearches.conf is generated from savedsearches.conf.j2, do not edit
 
 [2024/day01_part02.spl]
 search = | inputlookup day01.csv\
