--- a/advent-of-code/default/savedsearches.conf
+++ b/advent-of-code/default/savedsearches.conf
@@ -9,10 +9,8 @@ search = | inputlookup day01.csv\
     | stats c by y\
     | eval x = y\
 ]\
-| eval\
-    similarity = x * c\
-| stats\
-    sum(similarity) as test
+| eval similarity = x * c\
+| stats sum(similarity)
 
 [2024/day01_part01.spl]
 search = | inputlookup day01.csv\
