feat: add inputaoc option to disable whitespace stripping

--- a/app/default/searchbnf.conf
+++ b/app/default/searchbnf.conf
@@ -1,6 +1,9 @@
 [inputaoc-command]
-syntax = inputaoc <filename>
+syntax = inputaoc <filename> (strip_whitespace=<bool>)?
 shortdesc = Generates events from AOC input file from etc/apps/<app>/aoc/inputs/<filename>
-description = Generates events from AOC input file from etc/apps/<app>/aoc/inputs/<filename>.
+description = \
+    Generates events from AOC input file from etc/apps/<app>/aoc/inputs/<filename>.\
+    Parameters: \i\\
+    - <bool> "strip_whitespace": Remove leading and trailing whitespace, default: True \i\\
 maintainer = sondreomar
 tags = aoc
