--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
 name = "aoc-spl"
 version = "1.0"
-requires-python = ">=3.12"
-dependencies = ["jinja2==3.1.6"]
+requires-python = ">=3.9"
+dependencies = ["jinja2==3.1.6", "splunk-sdk==2.1.1"]
