--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,16 +16,24 @@
     "customizations": {
         "vscode": {
             "settings": {
-                "splunk.spec.FilePath": "/opt/splunk/etc/system/README/",
+                "[splunk_search]": {
+                    "editor.autoIndent": "advanced",
+                    "editor.insertSpaces": true,
+                    "editor.tabSize": 2,
+                    "files.insertFinalNewline": true
+                },
+                "[splunk]": {
+                    "editor.autoIndent": "full",
+                    "editor.insertSpaces": true,
+                    "editor.tabSize": 2
+                },
                 "python.defaultInterpreterPath": "/.venv/bin/python3",
                 "ruff.interpreter": [
                     "/.venv/bin/python3"
                 ],
+                "splunk.spec.FilePath": "/opt/splunk/etc/system/README/",
                 "splunk.commands.splunkRestUrl": "https://localhost:8089",
                 "splunk.commands.enableCertificateVerification": false,
-                "[splunk_search]": {
-                    "editor.tabSize": 4
-                },
                 "terminal.integrated.fontFamily": "MesloLGS NF"
             },
             "extensions": [
