feat: set splunk extension output mode to json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,6 +32,7 @@
                     "/.venv/bin/python3"
                 ],
                 "splunk.spec.FilePath": "/opt/splunk/etc/system/README/",
+                "splunk.search.searchOutputMode": "json",
                 "splunk.commands.splunkRestUrl": "https://localhost:8089",
                 "splunk.commands.enableCertificateVerification": false,
                 "terminal.integrated.fontFamily": "MesloLGS NF"
